syntax = "proto3";

import "google/protobuf/timestamp.proto";

package OrderService;

service Order {
    rpc AddOne(OrderRequest) returns (OrderReply);
    rpc GetAll(OrderQuery) returns (OrdersReply);
    rpc GetOne(OrderQuery) returns (OrderReply);
}

message OrderRequest {
    string IdPicture = 1;
    string IdOrderDelivery = 2;
    string IdUser = 3;
    google.protobuf.Timestamp OrderDate = 4;
}

message OrderQuery {
    string IdOrder = 1;
}

message OrderReply {
    string IdOrder = 1;
    string IdPicture = 2;
    string IdOrderDelivery = 3;
    string IdUser = 4;
    google.protobuf.Timestamp OrderDate = 5;
}

message OrdersReply {
    repeated OrderReply orders = 1;
}